# habana_frameworks

torch/: CMakeLists.txt  __init__.py
torch/activity_profiler/: __init__.py  activity_profiler.py
torch/core/: __init__.py  quantization.py  quantize_pt2e.py  step_closure.py  torch_overwrites.py  weight_sharing.py
torch/distributed/hccl/: __init__.py
torch/dynamo/: __init__.py  _custom_op_meta_registrations.py  device_interface.py  trace_rules.py
torch/dynamo/compile_backend/: __init__.py  backends.py  compilers.py  config.py  decomposition.py  experimental.py  freezing_passes.py  internal.py  logger.py  partition_fn.py  partitioner.py  passes.py  random_utils.py  recipe_compiler.py  shared_layer.py  symbolic_execution.py
torch/gpu_migration/: __init__.py  version.py
torch/gpu_migration/amp_C/: __init__.py
torch/gpu_migration/apex/: __init__.py
torch/gpu_migration/apex_C/: __init__.py
torch/gpu_migration/core/: _enums.py  _utils.py  register.py
torch/gpu_migration/pynvml/: __init__.py  nvml.py
torch/gpu_migration/torch/: __init__.py  _tensor.py  serialization.py
torch/hpex/kernels/: CTCLoss.py  CustomNms.py  CustomRoiAlign.py  CustomSoftmax.py  EmbeddingBag.py  EmbeddingBagPreproc.py  Fp8FusedSDPA.py  Fp8Ops.py  FusedSDPA.py  PySDPA.py  RandomSeed.py  RotaryPosEmbeddingHelper.py  ScaledMaskedSoftmax.py  Softmax.py  __init__.py  fbgemm.py
torch/hpex/movingavrg/: FusedEMA.py  (+1 more)
torch/hpu/: __init__.py  __init__.pyi  _proxy_module.py  _utils.py  events.py  graphs.py  memory.py  random.py  streams.py
torch/include/: hpu_custom_op.h
torch/internal/: bridge_config.py  fuse_conv_bn.py  synrec_helper.py
torch/media_pyt_bridge/: __init__.py
torch/profiler/: ProfilerApi.py
torch/utils/: _weights_only_unpickler.py  distributed_utils.py  internal.py  lib_utils.py  library_loader.py
(+105 files in other folders)
